# tapline

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: decode_check.rs  parse_dump.rs
songs/: 01-first-steps.bms  02-steady-rain.bms  03-rolling-thunder.bms  04-neon-drive.bms  05-circuit-breaker.bms  06-blue-hour.bms  07-final-cascade.bms  08-arcade-hero.bms
src/: audio.rs  bms.rs  chart.rs  cli.rs  game.rs  lib.rs  main.rs  render.rs  runtime.rs  select.rs
tests/: audio_bank.rs  bms_charts.rs  bms_edge.rs  bms_parse.rs  bms_property.rs  cli_smoke.rs  fixture_smoke.rs  game_property.rs  gameplay.rs
tests/fixtures/: sample.bms
